# 1-ProdGrade-RAG-Assistant

./: .env.example  PROGRESS.md  README.md  app_ui.py  config.py  debug_database.py  diagnose_issue.py  llm.py  main.py  prompts.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  test_ingestion.py  test_rag.py  test_setup.py
data/: docs.txt
data/policies/: 01_remote_work.txt  02_expense_policy.txt  03_security_training.txt  04_leave_policy.txt  05_meeting_guidelines.txt  06_code_of_conduct.txt  07_travel_policy.txt  08_equipment_policy.txt  09_onboarding_checklist.txt  10_performance_reviews.txt
docker/: Dockerfile  docker-compose.yml
src/: chunking.py  config.py  database.py  embeddings.py  ingestion.py  llm.py  prompts.py  rag.py  retrieval.py
tests/: diagnose_issue.py
ui/: app.py
