[project]
name = "company-ai-asst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.16.0",
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
]
